# SATySFi-simple-itemize

./: Makefile  README.md  Satyristes  satysfi-simple-itemize-doc.opam  satysfi-simple-itemize.opam  simple-itemize.satyh
doc/: doc-ja.md  doc-ja.saty
