opam-version: "1.0.0"
name: "satysfi-simple-itemize"
version: "0.1.0"
synopsis: ""
description: """"""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-simple-itemize"
bug-reports: "https://github.com/puripuri2100/SATySFi-simple-itemize/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-simple-itemize.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
  "satysfi-base" {>="1.0.0"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "simple-itemize"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]