opam-version: "2.0"
name: "satysfi-simple-itemize"
version: "1.0.2"
synopsis: "Document: Simple bullet on SATySFi"
description: """Document: Simple bullet on SATySFi."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-simple-itemize"
bug-reports: "https://github.com/puripuri2100/SATySFi-simple-itemize/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-simple-itemize.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
  "satysfi-base" {>="1.0.0"}
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "simple-itemize"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
